random error in VPlayback should be fixed. managed to do whatsapp-style playback, but can never make the ripples align perfectly with knob from start to end, so it is not worth it

--- a/voicewake/static/css/base.css
+++ b/voicewake/static/css/base.css
@@ -33,7 +33,7 @@
 
 /*much prefer this over plain focus, that way focus only appears when necessary*/
 *:focus-visible {
-    outline-width: 2px;
+    outline-width: 1px;
     outline-color: blueviolet;
     outline-offset: 2px;
 }
